--- a/pages/activities.html
+++ b/pages/activities.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actividades | Casa de Piedra .</title>
-    <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-    <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+    <meta name="description" content="Las mejores excursiones de Bariloche, Terrestres, Lacustres y de Aventura, Montañas, Lagos, Navegaciones, enterate de todo lo que podes realizar en Bariloche ">
+    <meta name="keywords" content="isla,victoria,ruta,7,lagos,rafting,manso,circuito,chico,puerto,blest,ski,snowboard,catedral,otto,tronador,cerro,montaña,rio,limay">
     <meta property="og:type" content="article"> 
-    <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+    <meta property="og:title" content="Excursiones y Actividades Casa de Piedra Bariloche">
+    <meta property="og:description" content="Contrata las mejores excursiones y conoce todas las actividades que podes realizar en Bariloche">
+    <meta property="og:url" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/pages/activities.html">
+    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/islavictoria.jpg">
     <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:description" content="Contrata las mejores excursiones y conoce todas las actividades que podes realizar en Bariloche">
+    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/islavictoria.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
     <link rel="icon" type="image/jpg" href="../images/favicon.ico">
